# loan-ops

./: .coveragerc  .gitignore  CELERY_MOCK_SETUP_COMPLETE.md  DECISIONS.md  FRONTEND_COMPLETE.md  FRONTEND_SUMMARY.md  HATCHET_ARCHITECTURE.md  QUICKSTART.md  README.md  README_WORKERS.md  WORKERS_GUIDE.md  alembic.ini  demo_loan_application.py  env.example  pyproject.toml  pytest.ini  run_tests.sh  setup_test_db.sh  start_api.sh  start_frontend.sh  start_hatchet_worker.sh  start_worker.sh  start_workers.sh
alembic/: env.py
alembic/versions/: 2118a2715dde_init.py  3a4b5c6d7e8f_add_lender_model.py  4c5d6e7f8g9h_add_loan_application_models.py
app/: celery_app.py  db.py  main.py
app/models/: __init__.py  lender.py  loan_application.py
app/routers/: __init__.py  lender_routes.py  loan_application_routes.py
app/services/: __init__.py  llm_service.py  match_service.py  ocr_service.py
app/tasks/: __init__.py  lender_tasks.py
app/workflows/: __init__.py  hatchet_config.py  lender_processing_workflow.py  loan_matching_workflow.py  worker.py
docs/: API_EXAMPLES.md  ARCHITECTURE.md  CHANGES.md  FRONTEND.md  FRONTEND_FEATURES.md  INDEX.md  LOAN_APPLICATION_FLOW.md  SETUP.md
frontend/: README.md  index.html  package-lock.json  package.json
frontend/src/: App.tsx  config.ts  index.css
frontend/src/components/: ErrorMessage.tsx  FileUpload.tsx  Layout.tsx  LoadingSpinner.tsx  StatusBadge.tsx
tests/: README.md  conftest.py  env.test.example  test_celery_mock.py  test_lender_upload.py  test_loan_application_upload.py  test_loan_flow.py
tests/assets/: .gitkeep
(+4 files in other folders)
