[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "kaaj"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "alembic>=1.16.5",
    "asyncpg>=0.31.0",
    "fastapi[standard]>=0.127.0",
    "psycopg>=3.2.13",
    "psycopg-binary>=3.2.13",
    "psycopg2-binary>=2.9.11",
    "pydantic-settings>=2.11.0",
    "python-dotenv>=1.2.1",
    "sqlalchemy>=2.0.45",
    "uvicorn[standard]>=0.39.0",
    "python-multipart>=0.0.9",
    "pytesseract>=0.3.10",
    "pdf2image>=1.17.0",
    "pillow>=10.0.0",
    "openai>=1.0.0",
    "celery>=5.4.0",
    "redis>=5.0.0",
    "greenlet>=3.2.4",
    "hatchet-sdk>=0.30.0",
]

[dependency-groups]
dev = [
    "black>=25.11.0",
    "httpx>=0.28.1",
    "isort>=6.1.0",
    "mypy>=1.19.1",
    "pytest>=8.4.2",
    "pytest-asyncio>=0.24.0",
]

[tool.setuptools]
packages = ["app", "app.models", "app.routers", "app.services", "app.tasks"]
